--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,72 @@
-# Python virtual environments
-venv/
-backend/venv/
-.env
-
-# Python cache
+# =====================
+# Python
+# =====================
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+*.egg-info/
+.eggs/
 
-# OS files
-.DS_Store
+# Virtual Environments
+venv/
+env/
+.venv/
+backend/venv/
+
+# =====================
+# Node / Frontend
+# =====================
+node_modules/
+dist/
+build/
+
+# =====================
+# Environment variables
+# =====================
+.env
+.env.local
+
+# =====================
+# OS & Editor
+# =====================
 Thumbs.db
-
-# IDE
 .vscode/
 .idea/
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
+# =====================
 # Logs
+# =====================
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+node_modules
+dist
+dist-ssr
+*.local
 
-# Local config
-.env.local
+# =====================
+# Cache
+# =====================
+.pytest_cache/
+.mypy_cache/
+
+# =====================
+# Lock files (optional)
+# =====================
+uv.lock
+
 
