Fixed: 500 Internal Error

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.110.0
-uvicorn==0.27.1
-pandas==2.2.1
-numpy==1.26.4
-yfinance==0.2.36
-pydantic==2.6.4
-python-dotenv==1.0.1
+fastapi
+uvicorn
+pandas
+numpy
+yfinance
+pydantic
+python-dotenv
