--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,12 +1,15 @@
 [project]
-name = "trading-strategy-backtester"
+name = "backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.128.0",
-    "pandas>=2.3.3",
+    "numpy>=2.4.1",
+    "pandas>=3.0.0",
+    "pydantic>=2.12.5",
+    "python-dotenv>=1.2.1",
     "uvicorn>=0.40.0",
     "yfinance>=1.0",
 ]
